<resources>

    <string name="app_name">Encierro</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Encierro</string>
    <string name="register">Register</string>
    <string name="registry_status">Registry Status:</string>
    <string name="registry_status_result">Not Registered</string>
    <string name="broadcast_label">Mensajes:</string>
    <string name="broadcast_result">No broadcast message yet</string>
    <string name="action_settings">action_settings</string>
    <string name="regbutton">Registrar</string>
    <string name="ambulance">Ambulancia</string>
    <string name="place">Puesto</string>
    <string name="server_registering">Server Regstering</string>
    <string name="server_registered">Server registered</string>
    <string name="server_register_error">Server register error</string>
    <string name="server_unregistered">Server unregistered</string>
    <string name="server_unregister_error">Server unregister error</string>
    <string name="gcm_registerred">GCM unregistered</string>
    <string name="gcm_error">GCM error</string>
    <string name="edit">Editar</string>

    <string name="welcome">WELCOME</string>
    <string name="logout">Logout Me</string>
    <string name="registerMe">I don\&apos;t have account. Register Me!</string>
    <string name="login">Entrar</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="LOGIN">ENTRAR</string>
    <string name="hello">HELLO</string>
    <string name="alreadyRegistered">Already registered. Login Me!</string>
    <string name="fullName">Full Name</string>
    <string name="REGISTER">REGISTRAR</string>
    <string name="user">Usuario</string>
    <string name="trachealIntubation"> Intubación traqueal </string>
    <string name="saveChanges">Guardar</string>
    <string name="delete">Borrar</string>
    <string name="viewInjured">Ver heridos</string>
    <string name="addNewInjured">Nuevo herido</string>
    <string name="gender">Sexo:</string>
    <string name="old">Edad:</string>
    <string name="newInjured">Nuevo herido</string>
    <string name="stand">Puesto:</string>
    <string name="symptom"><u>Sintomas</u></string>
    <string name="health_center">Centro sanitario</string>
    <string name="cancel">Cancelar</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="P50">+50</string>
    <string name="B3050">30–50</string>
    <string name="M30">-30</string>
    <string name="conscious">Consciente</string>
    <string name="unconscious">Inconsciente</string>
    <string name="status">Nivel de consciencia</string>
    <string name="s1">Magulladuras</string>
    <string name="s2">Fractura</string>
    <string name="userId">Indicativo</string>
    <string name="head">Cabeza/Cuello</string>
    <string name="skull">Craneal</string>
    <string name="onHead">Cabeza</string>
    <string name="goring">Cornada</string>
    <string name="chest">Torax/Abdomen</string>
    <string name="back">Espalda</string>
    <string name="arms">Brazos</string>
    <string name="legs">Piernas</string>
    <string name="fracture">Fractura</string>
    <string name="resource">Recurso</string>
    <string name="muyGrave">Muy Grave</string>
    <string name="grave">Grave</string>
    <string name="icon">gravedad</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="reg_gcm">Reg GCM</string>
    <string name="btn_desreg_gcm">DesReg GCM</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="viewStandInjured">Ver heridos del puesto</string>
    <string name="leve">leve</string>
    <string name="triage">triaje</string>
    <string name="dead">Muerto</string>
    <string name="urgencia"><bold>Nueva urgencia: E-0</bold></string>
    <string name="hospital"><bold>Centro hospitalario</bold></string>
    <string name="libre"><bold>Libre</bold></string>
    <string name="cargado"><bold>Cargado</bold></string>
    <string name="enCamino"><bold>En camino</bold></string>
    <string name="datosPaciente">Datos paciente</string>
    <string name="txtStatus">STATUS</string>
    <string name="advanced"><u>+Info</u></string>
    <string name="glasgow">Glasgow: </string>
    <string name="bloodPresure">P.A.: </string>
    <string name="others">Otros</string>
    <string name="tce">TCE</string>
    <string name="hemorrhages">Sangrado masivo</string>
    <string name="txPenetratingInjury">H.penetrante TX</string>
    <string name="abdomenPenetratingInjury">H.penetrante Abdomen</string>
    <string name="policontusion">Policontusion</string>
    <string name="bruises">Magulladuras</string>
    <string name="advancedOptions">Opciones Avanzadas</string>
    <string name="face">Golpe en cara</string>
    <string name="tracheal_intubation">Insuficiencia respiratoria</string>
    <string name="blank"> - </string>
    <string name="title_main_activity">Menú ambulancias</string>
    <string name="title_edit">Editar herido</string>
    <string name="title_gender">Sexo</string>
    <string name="title_old">Edad</string>
    <string name="title_symptom">Sintomas</string>
    <string name="title_menu_activity">Menu transmisiones</string>
    <string name="title_register">Registro de usuario</string>
    <string name="title_all_injured">Heridos</string>
    <string name="lbl_exit">Cerrar sesion</string>
    <string name="lbl_home">Menu</string>
    <string name="lbl_back">Volver</string>
    <string name="valldo">vallado</string>
    <string name="transfer">TRASLADO HOSPITAL</string>
    <string name="notes">Notas: </string>
    <string name="medicalizada">Medicalizada</string>
    <string name="convencional">Convencional</string>
    <string name="transmisiones">Transmisiones</string>
    <string name="contusions">Contusiones</string>
    <string name="contusionsDeformities">Contusion con</string>
    <string name="deformities">Deformidades</string>
    <string name="lbl_connected">conectado</string>
    <string name="id">ID:</string>
    <string name="pruebas">Modo PRUEBAS</string>
    <string name="test">Pruebas</string>
    <string name="normalMode">Modo encierro</string>
    <string name="testMode">Modo prueba</string>
    <string name="mode">Modos de uso</string>
    <string name="recoverLostPassword">¿Olvidaste la constraseña?</string>
    <string name="encierro">encierro</string>
    <string name="deformity">deformidad</string>
    <string name="tx">Tórax</string>
    <string name="abdomen">Abdomen</string>
    <string name="cuts">Cortes (sutura)</string>
    <string name="location">Establecer localización</string>
    <string name="thisLocation">Establecer este punto como localización del puesto</string>
    <string name="selectGender"><u>Seleccione el sexo del herido</u></string>
    <string name="selectOld"><u>Seleccione el rango de edad del herido</u></string>
    <string name="addSympthons"><u>Indique la sintomatología del herido</u></string>
    <string name="editSympthons"><u>Modifique la sintomatología del herido</u></string>
    <string name="chat">Chat</string>
    <string name="SendMessage">Mensaje a enviar:</string>
    <string name="EnviarMensaje">Enviar mensaje</string>
    <string name="Send">Enviar</string>

    <string-array name="spinnerPlace">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>base0</item>
    </string-array>

    <string-array name="spinnerResource">
        <item>Transmisiones</item>
        <item>Convencional</item>
        <item>Medicalizada</item>
    </string-array>
</resources>